Small tweaks to fix react warnings and fix customizer overflow

--- a/src/_scss/customizer/_theme.scss
+++ b/src/_scss/customizer/_theme.scss
@@ -43,7 +43,6 @@
   }
 
   .accordion-section-content {
-    overflow: visible;
     padding: 0;
     color: inherit;
   }
